--- a/SouDizimista.WebApp/Views/Shared/_Layout.cshtml
+++ b/SouDizimista.WebApp/Views/Shared/_Layout.cshtml
@@ -26,14 +26,14 @@
 
                         <li>
                             <a class="search" href="#">
-                                <input  class="browser-menu" />
+                                <input class="browser-menu" />
                                 <span class="icon-menu"><ion-icon id="paroquias-menu" name="search-outline"></ion-icon></span>
                             </a>
                         </li>
 
 
                         <li>
-                            <a class="nav-link  nav-menu" asp-area="" asp-controller="Home" asp-action="Privacy">Admin</a>
+                            <a class="nav-link  nav-menu" asp-area="" asp-controller="Home" asp-action="Privacy"> Administração </a>
                         </li>
 
                         <li>
@@ -58,7 +58,7 @@
                     <li class="list active">
                         <a href="#">
                             <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-                            <span class="title">Home</span>
+                            <span class="title">Nova Paróquia</span>
                         </a>
                     </li>
 
@@ -67,21 +67,7 @@
                             <span class="icon"><ion-icon name="body-outline"></ion-icon></span>
                             <span class="title">Novo Dizimista</span>
                         </a>
-                    </li>
-
-                    <li class="list">
-                        <a href="#">
-                            <span class="icon"><ion-icon name="create-outline"></ion-icon></span>
-                            <span class="title">Editar Dizimista</span>
-                        </a>
-                    </li>
-
-                    <li class="list">
-                        <a href="#">
-                            <span class="icon"><ion-icon name="trash-outline"></ion-icon></span>
-                            <span class="title">Excluir dizimista</span>
-                        </a>
-                    </li>
+                    </li>                  
 
                     <li class="list">
                         <a href="#">
