--- a/SouDizimista.WebApp/wwwroot/styles/main.css
+++ b/SouDizimista.WebApp/wwwroot/styles/main.css
@@ -146,7 +146,7 @@ nav ul li a span:hover{
     transition: 0.6s;
     margin: 0.1rem;
 }
-.navigation:hover {
+.navigation{
     width: 300px;
 }
 
