--- a/SouDizimista.WebApp/Views/Dizimista/NewDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/NewDizimista.cshtml
@@ -1,8 +1,46 @@
-﻿@{
-    ViewData["Title"] = "Novo Dizimista";
+﻿@model SouDizimista.Services.DTO.DizimistaDTO
+
+@{
+    ViewData["Title"] = "NewDizimista";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Adicionar Novo Dizimista </h1>
-    
+<div class="container">
+    <div class="row">
+        <form asp-action="NewDizimista">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <h2> Adicionando Dizimista </h2>
+            <hr />
+            <div class="row">
+                <div class="col-md-6">
+                    <label asp-for="Nome" class="control-label">Nome do Dizimista</label>
+                    <input asp-for="Nome" class="form-control" />
+                    <span asp-validation-for="Nome" class="text-danger"></span>
+                </div>
+                <div class="col-md-6">
+                    <label asp-for="ValorDevolucao" class="control-label">Valor do Dizimo</label>
+                    <input asp-for="ValorDevolucao" class="form-control" />
+                    <span asp-validation-for="ValorDevolucao" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group form-inline btnsubmitBack" >
+                <div>
+                   <input type="submit" value="Adicionar Dizimista" class="btn btn-primary" />
+                </div>
+
+                <div class="btnBack">
+                    <a class="btn btn-info" asp-action="Index">Voltar</a>
+                </div>
+            </div>
+
+        </form>
+    </div>
 </div>
+
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    }
