--- a/SouDizimista.WebApp/wwwroot/styles/main-content.css
+++ b/SouDizimista.WebApp/wwwroot/styles/main-content.css
@@ -1,6 +1,10 @@
 ﻿body {
 }
 
+.title-lable-dizimista {
+    color: #087575;
+}
+
 .content-main {
     margin-left: 15rem;
     margin-top: 1.5rem;
