--- a/SouDizimista.WebApp/Views/Dizimista/EditDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/EditDizimista.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SouDizimista.Services.DTO.DizimistaDTO
 
 @{
-    ViewData["Title"] = "NewDizimista";
+    ViewData["Title"] = "EditDizimista";
 }
 
 <div class="container">
@@ -43,7 +43,7 @@
                     <div class="col-5">
 
                         <label class="title-lable-dizimista">Logradouro</label>
-                        <input class="form-control readOnly" name="logradouro" type="text" data-viacep="logradouro" data-receitaws="logradouro" value="" id="logradouro" />
+                        <input asp-for="Logradouro" class="form-control readOnly" name="Logradouro" type="text" data-viacep="logradouro" data-receitaws="logradouro" id="logradouro" />
 
                     </div>
 
@@ -51,14 +51,14 @@
                     <div class="col-5">
 
                         <label class="title-lable-dizimista">Complemento</label>
-                        <input class="form-control btnaction readOnly" name="complemento" type="text" data-viacep="complemento" data-receitaws="complemento" value="" id="complemento" />
+                        <input asp-for="Complemento" class="form-control btnaction readOnly" name="Complemento" type="text" data-viacep="complemento" data-receitaws="complemento" id="complemento" />
 
                     </div>
 
                     <div class="col-2">
 
                         <label class="title-lable-dizimista">Numero</label>
-                        <input class="form-control btnHide readOnly" type="text" data-viacep="numero" data-receitaws="numero" name="numero" id="numero" />
+                        <input asp-for="Numero" class="form-control btnHide readOnly" type="text" data-viacep="numero" data-receitaws="numero" name="Numero" id="numero" />
 
                     </div>
                 </div>
@@ -69,21 +69,21 @@
                     <div class="col-5">
 
                         <label class="title-lable-dizimista">Bairro</label>
-                        <input class="form-control btnaction readOnly" name="bairro" type="text" data-viacep="bairro" data-receitaws="bairro" id="bairro" />
+                        <input asp-for="Bairro" class="form-control btnaction readOnly" name="Bairro" type="text" data-viacep="bairro" data-receitaws="bairro" id="bairro" />
 
                     </div>
 
                     <div class="col-5">
 
                         <label class="title-lable-dizimista">Municipio</label>
-                        <input class="form-control btnaction readOnly" name="municipio" type="text" data-viacep="localidade" data-receitaws="municipio" id="municipio" />
+                        <input asp-for="Municipio" class="form-control btnaction readOnly" name="Municipio" type="text" data-viacep="localidade" data-receitaws="municipio" id="municipio" />
 
                     </div>
 
                     <div class="col-2">
 
                         <label class="title-lable-dizimista">Estado</label>
-                        <input class="form-control btnaction readOnly" name="estado" type="text" data-viacep="uf" data-receitaws="uf" id="estado" />
+                        <input asp-for="Estado" class="form-control btnaction readOnly" name="Estado" type="text" data-viacep="uf" data-receitaws="uf" id="estado" />
 
                     </div>
 
@@ -114,5 +114,6 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
  }
+
 
 
