--- a/SouDizimista.WebApp/Views/Dizimista/GetAllDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/GetAllDizimista.cshtml
@@ -4,16 +4,22 @@
     ViewData["Title"] = "Nossos Dizímistas";
 }
 
-<h1 class="corFonte"">Nossos Dizímistas</h1>
+<h1 class="color-source" ">Nossos Dizímistas</h1>
+<hr>
 
-<table class="table">
+<table >
     <thead>
         <tr>
-            <th class="corFonte">
-                @Html.DisplayName("Nome do Dizimsta")
-            </th>
-            <th class="corFonte">
-                @Html.DisplayName("Valor do Dizímo")
+            <th class="text-source">
+                @Html.DisplayName("Nome")
+            </th class="text-source">
+
+            <th class="text-source">
+                @Html.DisplayName("Valor")
+            </th class="text-source">
+
+            <th class="text-source">
+                @Html.DisplayName("Opções")
             </th>
 
             <th></th>
@@ -22,20 +28,20 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ValorDevolucao)
-                </td>
+        <tr >
+            <td class="text-source">
+                @Html.DisplayFor(modelItem => item.Nome)
+            </td>
+            <td class="text-source">
+                @Html.DisplayFor(modelItem => item.ValorDevolucao)
+            </td>
 
-                <td>
-                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" class="btn btn-info" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
+            <td>
+                @Html.ActionLink("Alterar", "EditDizimista", new { id = item.Id }, new { @class = "btn btn-info" })
+                @Html.ActionLink("Consultar", "Details", new { id = item.Id }, new {@class = "btn btn-secondary" })
+                @Html.ActionLink("Excluir", "Delet", new { id = item.Id }, new { @class = "btn btn-danger" })
+            </td>
+        </tr>
         }
     </tbody>
 </table>
