--- a/SouDizimista.WebApp/Views/Shared/_Layout.cshtml
+++ b/SouDizimista.WebApp/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                         <li class="list active">
                             <a asp-area="" asp-controller="Paroquia" asp-action="GetAllParoquia">
                                 <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-                                <span class="title">Nova Paróquia</span>
+                                <span class="title">Igreja</span>
                             </a>
                         </li>
 
@@ -108,7 +108,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container-footer">
-            &copy; 2022 - Gms-Solutions-Technology <a asp-area="" asp-controller="Home" asp-action="Privacy"></a>
+            &copy; Gms-Solutions-Technology <a asp-area="" asp-controller="Home" asp-action="Privacy"></a>
         </div>
     </footer>
     <script src="~/js/NewDizimista.js"></script>
