--- a/SouDizimista.WebApp/wwwroot/styles/main.css
+++ b/SouDizimista.WebApp/wwwroot/styles/main.css
@@ -136,9 +136,9 @@ nav ul li a span:hover{
 .navigation {
     display: block;
     position: relative;
-    height: 500px;
+    height: 486px;
     background-color: #0ebbbb;
-    width: 70px;
+    width: 300px;
     box-shadow: 10px 0 0 #039090;
     border-left: 10px solid #039090;
     border-top-left-radius: 10px;
@@ -146,9 +146,9 @@ nav ul li a span:hover{
     transition: 0.6s;
     margin: 0.1rem;
 }
-.navigation:hover{
+/*.navigation:hover{
     width: 300px;
-}
+}*/
 
 .navigation ul{
     position:absolute;
