Concluindo tela Consulta Dizimista

--- a/SouDizimista.WebApp/Views/Dizimista/GetAllDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/GetAllDizimista.cshtml
@@ -38,7 +38,7 @@
 
             <td>
                 @Html.ActionLink("Alterar", "EditDizimista", new { id = item.Id }, new { @class = "btn btn-info" })
-                @Html.ActionLink("Consultar", "Details", new { id = item.Id }, new {@class = "btn btn-secondary" })
+                @Html.ActionLink("Consultar", "ConsultDizimista", new { id = item.Id }, new {@class = "btn btn-secondary" })
                 @Html.ActionLink("Excluir", "Delet", new { id = item.Id }, new { @class = "btn btn-danger" })
             </td>
         </tr>
