--- a/SouDizimista.WebApp/Views/Dizimista/GetAllDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/GetAllDizimista.cshtml
@@ -39,7 +39,7 @@
             <td>
                 @Html.ActionLink("Alterar", "EditDizimista", new { id = item.Id }, new { @class = "btn btn-info" })
                 @Html.ActionLink("Consultar", "ConsultDizimista", new { id = item.Id }, new {@class = "btn btn-secondary" })
-                @Html.ActionLink("Excluir", "Delet", new { id = item.Id }, new { @class = "btn btn-danger" })
+                @Html.ActionLink("Excluir", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
             </td>
         </tr>
         }
