--- a/SouDizimista.WebApp/Views/Dizimista/NewDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/NewDizimista.cshtml
@@ -98,7 +98,7 @@
                     </div>
 
                     <div class="btnBack">
-                        <a class="btn btn-info" asp-action="Index">Voltar</a>
+                        <a class="btn btn-warning" asp-action="GetAllDizimista">Voltar</a>
                     </div>
                 </div>
 
