--- a/SouDizimista.WebApp/Views/Dizimista/ConsultDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/ConsultDizimista.cshtml
@@ -63,7 +63,7 @@
         </div>
 
         <div style="margin-top:1rem;" class="btnBack text-right">
-            <a class="btn btn-warning" asp-action="GetAllDizimista">Voltar</a>
+            <a class="btn btn-info" asp-action="GetAllDizimista">Voltar</a>
         </div>
 
     </div>
