--- a/SouDizimista.WebApp/Views/Dizimista/Delete.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/Delete.cshtml
@@ -14,7 +14,7 @@
     </div>
 
     <div class="btnBack">
-        <a class="btn btn-warning" asp-action="GetAllDizimista">Voltar</a>
+        <a class="btn btn-info" asp-action="GetAllDizimista">Voltar</a>
     </div>
 </div>
 
@@ -22,30 +22,30 @@
 <!-- Modal de exclusão -->
 <div id="deleteModal" class="modal">
     <div class="modal-content">
-        <span class="close">&times;</span>
+        <span style="color:#ff0000!important;" class="close">&times;</span>
         <p>Deseja realmente excluir o Dizimista Sr(a) @Model.Nome ?</p>
 
         @using (Html.BeginForm("Delete", "Dizimista", FormMethod.Post))
         {
             <div id="deleteId">
+
                 <div class="row">
 
                     <div class="col-md-6">
                         <label asp-for="Nome" class="control-label title-lable-dizimista">Nome do Dizimista</label>
-                        <input asp-for="Nome" class="form-control" />
+                        <input asp-for="Nome" class="form-control" readonly/>
                         <span asp-validation-for="Nome" class="text-danger"></span>
                     </div>
                     <div class="col-md-6">
                         <label asp-for="ValorDevolucao" class="control-label title-lable-dizimista">Valor do Dizimo</label>
-                        <input asp-for="ValorDevolucao" class="form-control" />
+                        <input asp-for="ValorDevolucao" class="form-control" readonly/>
                         <span asp-validation-for="ValorDevolucao" class="text-danger"></span>
                     </div>
 
                 </div>
 
             </div>
-
-            <input class="btn btn-info btnDelete" type="submit" value="Confirmar" />
+            <input class="btn btn-primary btnDelete" type="submit" value="Confirmar" />
         }
     </div>
 </div>
