--- a/SouDizimista.WebApp/Views/Dizimista/NewDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/NewDizimista.cshtml
@@ -87,9 +87,6 @@
 
                     </div>
 
-
-
-
                 </div>
 
                 <div class="form-group form-inline btnsubmitBack">
@@ -98,7 +95,7 @@
                     </div>
 
                     <div class="btnBack">
-                        <a class="btn btn-warning" asp-action="GetAllDizimista">Voltar</a>
+                        <a class="btn btn-info" asp-action="Index">Voltar</a>
                     </div>
                 </div>
 
