Inserindo Estrutura para Enderenço

--- a/SouDizimista.WebApp/Views/Dizimista/Delete.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SouDizimista.Services.DTO.DizimistaDTO
+﻿@model SouDizimista.Services.ServicesEntity.ServiceDizimista
 @{
     ViewData["Title"] = "Delete";
 }
