--- a/SouDizimista.WebApp/Views/Paroquia/GetAllParoquia.cshtml
+++ b/SouDizimista.WebApp/Views/Paroquia/GetAllParoquia.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SouDizimista.Services.DTO.ParoquiaDTO>
+﻿@model IEnumerable<SouDizimista.Services.ServicesEntity.ServiceParoquia>
 
 @{
     ViewData["Title"] = "Paroquias";
