--- a/SouDizimista.WebApp/Views/Dizimista/GetAllDizimista.cshtml
+++ b/SouDizimista.WebApp/Views/Dizimista/GetAllDizimista.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SouDizimista.Services.DTO.DizimistaDTO>
+﻿@model IEnumerable<SouDizimista.Services.ServicesEntity.ServiceDizimista>
 
 @{
     ViewData["Title"] = "Nossos Dizímistas";
