--- a/SouDizimista.WebApp/Views/Shared/_Layout.cshtml
+++ b/SouDizimista.WebApp/Views/Shared/_Layout.cshtml
@@ -25,14 +25,14 @@
                         <li>
                             <a id="paroquias-menu" asp-controller="Paroquia" asp-action="GetAllParoquia" class="nav-link nav-menu hand">Paróquias</a>
                         </li>
-@*
+                        @*
                         <li>
-                            <a class="search" href="#">
-                                <input class="browser-menu" />
-                                <span class="icon-menu"><ion-icon id="paroquias-menu" name="search-outline"></ion-icon></span>
-                            </a>
+                        <a class="search" href="#">
+                        <input class="browser-menu" />
+                        <span class="icon-menu"><ion-icon id="paroquias-menu" name="search-outline"></ion-icon></span>
+                        </a>
                         </li>*@
-                        
+
 
                         <li>
                             <a class="nav-link  nav-menu" asp-area="" asp-controller="Dizimista" asp-action="NewDizimista"> Administração </a>
@@ -50,16 +50,16 @@
             </div>
         </nav>
 
-         <aside>
+        <aside>
             <section class="sidebar">
 
                 <div class="navigation">
                     <ul>
 
                         <li class="list active">
-                            <a asp-area="" asp-controller="Paroquia" asp-action="GetAllParoquia">
+                            <a asp-area="" asp-controller="Paroquia" asp-action="CreateParoquia">
                                 <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-                                <span class="title">Igreja</span>
+                                <span class="title">Nova Paróquia</span>
                             </a>
                         </li>
 
